2005-01-02 Borut Razem <borut.razem@siol.net>
	* gui/gui_break.cc, gui/dialog.cc, gui/gui_init.cc, gui/gui_menu.cc,
	  gui/gui_processor.cc, gui/gui_src.cc, gui/gui_src_asm.cc
	  gui/gui_src_opcode.cc: removed unneeded include gtkcombobox.h
	* gui/gui_breadboard.cc: fixed compiler warnings
	* cli/Makefile.am, gui/Makefile.am: added AM_ preffix to CFLAGS,
	  CXXFLAGS, CPPFLAGS and YFLAGS
	* doc/gpsimWin32.html: gtk+ version 2.4.14, XHTML 1.0 Transitional compliant,
	  gtk+extra-2-1.1.0-20050102
	* doc/gpsim_cvs.html: changed first build instructions

2004-12-17 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, src/interface.cc, cli/socket.cc: removed
	dependencies on GTK 2.0.


2004-12-19 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: added examples/scripts/client_interface.h
	  to installation
	* mingw/makefile.mingw, gpsim/gpsim.vcproj: added gthread-2.0.lib
	* src/src.vcproj: removed plat\win32\glist.cpp from project; CLI
	  mode now requires linking with full glib library; added src/trigger.cc
	  and src/trigger.h to the project
	* modules/modules.vcproj: pthreads to the project
	* gpsim.sln: removed building of modules in CLI configuration

2004-12-17 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, src/interface.cc: replaced pthread_* calls and
	declarations with the corresponding GTK ones.

2004-12-17 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, src/interface.cc: Added experimental code to
	test threading.

2004-12-16 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, gui/gui_menu.cc: Use the interface instead of
	the cpu pointer to initiate simulation.
	* src/Makefile.am, src/trigger.cc, src/trigger.h,
	src/breakpoints.cc, src/breakpoints.h: Split the
	trigger classes away from the breakpoint classes.
	* src/gpsim_interface.h, src/init.cc, src/interface.cc,
	src/pic-processor.cc, src/protocol.cc, src/protocol.h,
	src/trace.h, cli/cmd_run.cc, cli/cmd_set.cc, cli/cmd_trace.cc,
	cli/input.cc, cli/socket.cc: